--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Usuário</title>
+    <title>Cadastro de Usuário da ONG Vida Feliz</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,33 @@
                 <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
         </nav>
-
        <header>
+        <main>
+            <section>
+                <h2>Quem somos</h2>
+                <p>Somos uma ONG dedicada a ajudar pessoas em situação de vulnerabilidade social, oferecendo suporte e recursos para melhorar suas vidas.</p>
+                <img src="imagens/ong.jpg" alt="Imagem representando a ONG">
+            </section>
+
+            <section>
+                <h2>Nossos Projetos</h2>
+                <p>Desenvolvemos diversos projetos focados em educação, saúde e inclusão social, visando proporcionar um futuro melhor para as comunidades atendidas.</p>
+                <img src="imagens/projeto.jpg" alt="Imagem representando nossos projetos">
+            </section>
+
+            <section>
+                <h2>Onde você pode nos encontrar:</h2>
+                <address>
+                    <p>Endereço: Avenida Joâo De Magalhães, 1390 - Tramandai - RS</p>
+                    <p>Telefone: (51) 99580-7619</p>
+                    <p>Email: tamelalima4@gmail.com</p>
+                </address>
+
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; 2025 ONG Vida Feliz. Todos os direitos reservados.</p>
+        </footer>
 </body>
 </html>
